--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </div>
 
         <div class="virtual-assistant">
-            <img src="ai.png" alt="img" width="120px">
+            <img src="Static/ai.png" alt="img" width="120px">
         </div>
        
     </main>
     <div class="speak-page">
-            <img src="ai.png" alt="img" width="200px">
+            <img src="Static/ai.png" alt="img" width="200px">
             <h1>speak Now</h1>
-            <img src="voice.gif" alt="img" width="200px" id="voice">
+            <img src="Static/voice.gif" alt="img" width="200px" id="voice">
     </div>
     <footer>
         <div class="footer-content">
@@ -55,7 +55,7 @@
             <p>Phone: +91- 9080100028</p>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 Fitness Club. All rights reserved.</p>
+            <p>&copy; 2025 Fitness Club. All rights reserved.</p>
         </div>
     </footer>
   <script src="script.js"></script>  
