--- a/workout.html
+++ b/workout.html
@@ -73,14 +73,14 @@
 </main>
 
 <div class="virtual-assistant">
-    <img src="ai.png" alt="img" width="120px">
+    <img src="Static/ai.png" alt="img" width="120px">
 </div>
 
 </main>
 <div class="speak-page">
-    <img src="ai.png" alt="img" width="200px">
+    <img src="Static/ai.png" alt="img" width="200px">
     <h1>speak Now</h1>
-    <img src="voice.gif" alt="img" width="200px" id="voice">
+    <img src="Static/voice.gif" alt="img" width="200px" id="voice">
 </div>
 <footer>
     <div class="footer-content">
